# Pytalist

./: pyproject.toml
.github/workflows/: ci.yaml
pytalist/: main.py  validate.py
